fixed css alignment

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,8 @@ div.artist-name, div.artist-desc, div.album-name, div.album-band, div.album-year
 	width: 230px;
 	line-height: 30px;
 	padding-left: 6px;
+	border: 1px solid red;
+	margin-right: 4px;
 }
 
 input {
@@ -30,7 +32,7 @@ button {
 	line-height: 30px;
 	padding: 2px;
 	font-size: 16px;
-	margin-left: 6px;
+	margin-right: 6px;
 }
 
 button.create {
